# silly-kvm

./: .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  justfile  silly-kvm.service
.beads/: issues.jsonl
.github/: renovate.json
src/: ddc.rs  helpers.rs  main.rs
