[package]
name = "silly-kvm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
crossbeam-channel = "0.5.12"
rusb = "0.9.3"
signal-hook = "0.3.17"
log = "0.4.21"
simplelog = "0.12.1"
clap = { version = "4.5.1", features = ["derive"] }
